--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html lang="en">
 
 <head>
+   <meta name="google" value="notranslate">
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-   <title>Tokyo Ghoul</title>
+   <link rel="stylesheet" href="./css/style.css">
+   <title>TokyoGhoul</title>
 </head>
 
 <body>
    <header class="header">
-      <h1>Disclaimer:</h1>
+      <h1>Tokyo Ghoul 1000-7</h1>
       <p>This script was written at the time of the Tokyo ghoul meme</p>
    </header>
-   <button id="btn">1000-7</button>
-   <section id="script"></section>
+   <section class="ghoul">
+      <button id="btn">1000-7</button>
+   </section>
+   <div class="wrapper">
+      <div class="video" id="video">
+         <video src="./tokyoghoul.mp4" autoplay muted loop></video>
+      </div>
+      <div id="content"></div>
+   </div>
 
 
    <script src="./js/main.js"></script>
-
-
 </body>
 
 </html>
